--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "expo": "^30.0.1",
+    "lodash": "^4.17.11",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
-    "react-native-animatable": "^1.3.0"
+    "react-native-animatable": "^1.3.0",
+    "react-native-animated-sprite": "^0.11.1"
   }
 }
